# minecraft-simplify

./: .experiment-env  .gitignore  C2_craftBoat.patch  CLAUDE.md  README_PHASE0_2.md  launcher_profiles.json  options.txt  run.py
Adam/: ADAM.py  MLLM_API.py  infer_API.py  skill_loader.py  util_info.py  visual_API.py
docs/: BUDGET_AWARE_ACQUISITION_HANDOFF.md  FIX_ABORT_RESYNC_FLOOR_HANDOFF.md  FIX_F3M_HANDOFF.md  FIX_STATION_TYPE_HANDOFF.md  FIX_TRANSACTION_RESET_HANDOFF.md  FIX_X1_COSTDOWN_HANDOFF.md  PLANB_NO_PROBE_GATE_HANDOFF.md  ROUND2_STAGE1_HANDOFF.md  ROUND2_STAGE2_HANDOFF.md  ROUND2_STAGE3_HANDOFF.md  ROUND3_RENAME_MAP.md  ROUND3_STAGE01_HANDOFF.md  ROUND3_STAGE2_HANDOFF.md  ROUND3_STAGE3_HANDOFF.md  STAGE1_FIX_HANDOFF.md  STAGE1_HANDOFF.md  STAGE2_HANDOFF.md  STAGE3_HANDOFF.md  STAGE4_5_FIX_HANDOFF.md  STAGE4_HANDOFF.md  STAGE5_HANDOFF.md  STAGE6_HANDOFF.md  STAGE7_HANDOFF.md  contracts.md  manual_residue.md  paper_neighbor_expansion.md
env/: bridge.py  process_monitor.py
experiments/: audit_k7.py  cost_layering_report.py  eval_proposer.py  evaluate.py  injection_probe.py  run_round3_matrix.py  (+9 more)
experiments/iap_downstream/: CODEX_PROMPT.md  README.md  pyproject.toml
experiments/iap_downstream/iap_downstream/: __init__.py  acquisition.py  agent.py  calibration.py  causal_graph.py  env_adapter.py  executor.py  harness.py  metrics.py  mock_env.py  nota.py  planner.py  posterior.py  proposer.py  run_downstream.py  run_iap.py
experiments/iap_downstream/tests/: run_all.py  test_agent.py  test_executor.py  test_harness.py  test_metrics.py  test_planner.py
(+435 files in other folders)
